@@ -1,5 +1,6 @@
-20XX-XX-XX: 0.4.4:
+2025-XX-XX: 0.5.0:
 ------------------
+  * remove Python 2 support
 
 
 2023-11-04: 0.4.3:
